Prep for merging with jtvs branch.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -258,7 +258,7 @@ public.structuralsubscription           = SELECT, INSERT, UPDATE, DELETE
 public.temporaryblobstorage             = SELECT, INSERT, DELETE
 public.translationgroup                 = SELECT, INSERT, UPDATE
 public.translationimportqueueentry      = SELECT, INSERT, UPDATE, DELETE
-public.translationmessage               = SELECT, INSERT, UPDATE
+public.translationmessage               = SELECT, INSERT, UPDATE, DELETE
 public.translator                       = SELECT, INSERT, UPDATE, DELETE
 public.usertouseremail                  = SELECT, UPDATE
 public.validpersoncache                 = SELECT
