--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -746,6 +746,7 @@ public.flatpackagesetinclusion                  = SELECT, INSERT, UPDATE, DELETE
 public.binarypackagepublishinghistory           = SELECT, INSERT, UPDATE, DELETE
 public.sourcepackagepublishinghistory           = SELECT, INSERT, UPDATE, DELETE
 public.sourcepackagepublishinghistory           = SELECT
+public.distributionsourcepackage                = SELECT, INSERT, UPDATE
 
 # Closing bugs for publication copies.
 public.bug                              = SELECT, UPDATE
@@ -1465,6 +1466,7 @@ public.sourcepackagename                = SELECT
 public.sourcepackagerelease             = SELECT
 public.sourcepackagepublishinghistory   = SELECT
 public.structuralsubscription           = SELECT
+public.section                          = SELECT
 
 # Karma
 public.karma                            = SELECT, INSERT
