--- a/configs/testrunner/launchpad-lazr.conf
+++ b/configs/testrunner/launchpad-lazr.conf
@@ -131,6 +131,7 @@ max_scaling: 2
 [launchpad]
 max_attachment_size: 1024
 geoip_database: /usr/share/GeoIP/GeoLiteCity.dat
+logparser_max_parsed_lines: 100000
 
 [launchpad_session]
 cookie: launchpad_tests
