--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1131,6 +1131,10 @@ geoip_database: /usr/share/GeoIP/GeoIPCity.dat
 # ba-ws.geonames.net.
 geonames_identity:
 
+# The maximum number of lines that should be parsed by the launchpad
+# log parser.
+logparser_max_parsed_lines: 100000
+
 
 [launchpad_session]
 # The hostname where the session database is located.
