--- a/buildout.cfg
+++ b/buildout.cfg
@@ -28,9 +28,7 @@ allow-picked-versions = false
 
 prefer-final = true
 
-develop =
-        .
-        lazr.restful
+develop = .
 
 [configuration]
 instance_name = development
