--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1899,6 +1899,7 @@ openid_delegate_profile: False
 [vhost.api]
 # This key should be removed once the production configs have been updated.
 beta_test_team: disabled
+enable_server_side_representation_cache: False
 
 [vhost.blueprints]
 
