--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -270,6 +270,7 @@ openid_delegate_profile: True
 [vhost.api]
 hostname: api.launchpad.dev
 rooturl: https://api.launchpad.dev/
+enable_server_side_representation_cache: True
 
 [vhost.blueprints]
 hostname: blueprints.launchpad.dev
