--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1394,6 +1394,7 @@ public.potmsgset                        = SELECT
 public.potranslation                    = SELECT
 public.product                          = SELECT
 public.productseries                    = SELECT
+public.seriessourcepackagebranch        = SELECT
 public.translationmessage               = SELECT
 public.translationtemplateitem          = SELECT
 
