Use zope.testing-3.9.4-p1 from lp:~mars/zope.testing/3.9.4-p1

--- a/versions.cfg
+++ b/versions.cfg
@@ -214,8 +214,8 @@ zope.structuredtext = 3.4.0
 zope.tal = 3.5.1
 zope.tales = 3.4.0
 zope.testbrowser = 3.7.0a1
-# Build of lp:~mars/zope.testing/3.9.4-p0.  Fixes bug 570380.
-zope.testing = 3.9.4-p0
+# Build of lp:~mars/zope.testing/3.9.4-p1.  Fixes bugs 570380 and 587886.
+zope.testing = 3.9.4-p1
 zope.thread = 3.4
 zope.traversing = 3.8.0
 zope.viewlet = 3.6.1
