Nagios needs to check DatabaseRevisionLag

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1826,6 +1826,7 @@ public.branch                           = SELECT
 type=user
 public.archive                          = SELECT
 public.buildfarmjob                     = SELECT
+public.databasereplicationlag           = SELECT
 public.packagebuild                     = SELECT
 public.binarypackagebuild               = SELECT
 public.buildqueue                       = SELECT
