Missing db privilege for notification of unpushed branches.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1395,6 +1395,7 @@ public.potranslation                    = SELECT
 public.product                          = SELECT
 public.productseries                    = SELECT
 public.seriessourcepackagebranch        = SELECT
+public.teammembership                   = SELECT
 public.translationmessage               = SELECT
 public.translationtemplateitem          = SELECT
 
