--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -1785,10 +1785,6 @@ body.tab-bugs #portlet-subscribers .sprite {
      */
     padding:2px 0 0 18px;
     }
-.tour {
-    background-image: url(/@@/tour-icon); /* needs-ref: */
-    background-repeat: no-repeat;
-    }
 .add {
     background-image: url(/@@/add.png); /* sprite-ref: icon-sprites */
     background-repeat: no-repeat;
@@ -2178,6 +2174,10 @@ body.tab-bugs #portlet-subscribers .sprite {
     }
 .haspatch-icon {
     background-image: url(/@@/haspatch-icon.png); /* sprite-ref: icon-sprites */
+    background-repeat: no-repeat;
+    }
+.tour {
+    background-image: url(/@@/tour-icon); /* sprite-ref: icon-sprites */
     background-repeat: no-repeat;
     }
 .large-branch {
