--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1686,6 +1686,9 @@ global_suggestions_enabled: True
 # notifications because the branches it copies from production all
 # appear as unpushed.  And the notifications happen on codehosting,
 # which bypasses the staging mailbox and sends out email for real.
+# XXX JeroenVermeulen 2010-06-14 bug=593522: This is needed
+# because the staging codehosting server's email isn't being
+# captured like it should.
 notify_unpushed_branches: False
 
 # A different batch size for POFile:+translate pages to keep them from
