--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -275,7 +275,9 @@ openid_delegate_profile: True
 [vhost.api]
 hostname: api.launchpad.dev
 rooturl: https://api.launchpad.dev/
-enable_server_side_representation_cache: True
+# Turn this on once we've solved cache invalidation problems and are
+# ready to test.
+# enable_server_side_representation_cache: True
 
 [vhost.blueprints]
 hostname: blueprints.launchpad.dev
