Render the enable_bug_expiration and remote_product field as subordinate fields in the bug tracker widget.

--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -747,6 +747,9 @@ button {
 .fieldRequired, .fieldOptional {
     color: #999;
     }
+.field.subordinate {
+    margin-left: 2.6em;
+    }
 .formHelp {
     margin: 0.2em 0 0.5em 0.2em;
     color: #777;
