ensurePerson() might have to update rather than remove existing email addresses.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1056,7 +1056,7 @@ public.flatpackagesetinclusion          = SELECT
 public.account                          = SELECT, INSERT
 public.accountpassword                  = SELECT, INSERT
 public.person                           = SELECT, INSERT, UPDATE
-public.emailaddress                     = SELECT, INSERT
+public.emailaddress                     = SELECT, INSERT, UPDATE
 public.teamparticipation                = SELECT, INSERT
 public.teammembership                   = SELECT
 public.wikiname                         = SELECT, INSERT
