Pushed the bugtracker vocab rules to the base vocab. Reimplemented GhostWidget as a mixin to cover bool fields.

--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -716,6 +716,9 @@ form table tbody th {
 form table label {
     font-weight: bold;
     }
+.field.subordinate label {
+    font-weight: normal;
+    }
 fieldset {
     border-width: 2px 0 0;
     margin: 1em 0;
