Fixed a lot of test brekage.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1341,6 +1341,7 @@ public.customlanguagecode               = SELECT
 public.distribution                     = SELECT
 public.distroseries                     = SELECT
 public.language                         = SELECT
+public.packaging                        = SELECT
 public.person                           = SELECT
 public.pofile                           = SELECT, INSERT, UPDATE
 public.pomsgid                          = SELECT
