--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -586,6 +586,9 @@ public.revisionparent                   = SELECT, INSERT
 public.revisionproperty                 = SELECT, INSERT
 public.seriessourcepackagebranch        = SELECT
 public.sourcepackagename                = SELECT
+public.sourcepackagerecipe              = SELECT, UPDATE
+public.sourcepackagerecipedata          = SELECT
+public.sourcepackagerecipedatainstruction = SELECT
 public.staticdiff                       = SELECT, INSERT, DELETE
 public.validpersoncache                 = SELECT
 public.validpersonorteamcache           = SELECT
