Make daily builds use is_stale.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -703,7 +703,7 @@ public.job                                      = SELECT, INSERT
 public.person                                   = SELECT
 public.processor                                = SELECT
 public.processorfamily                          = SELECT
-public.sourcepackagerecipe                      = SELECT
+public.sourcepackagerecipe                      = SELECT, UPDATE
 public.sourcepackagename                        = SELECT
 public.sourcepackagerecipebuild                 = SELECT, INSERT
 public.sourcepackagerecipebuildjob              = SELECT, INSERT
