Increase the spacing between compound items in forms.

--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -716,6 +716,9 @@ form table tbody th {
 form table label {
     font-weight: bold;
     }
+.compound {
+    margin-bottom: .5em;
+    }
 .field.subordinate label {
     font-weight: normal;
     }
