--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1132,8 +1132,8 @@ geoip_database: /usr/share/GeoIP/GeoIPCity.dat
 geonames_identity:
 
 # The maximum number of lines that should be parsed by the launchpad
-# log parser.
-logparser_max_parsed_lines: 100000
+# log parser. The default value of None means there is no maximum.
+logparser_max_parsed_lines: None
 
 
 [launchpad_session]
