--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -126,6 +126,20 @@
    Universal presentation
    Block elements.
 */
+/* XXX EdwinGrubbs 2010-06-18 bug=570354
+ * The PrettyOverlay css uses static values for the width, but
+ * the overlay needs to stretch for forms with wide input fields.
+ */
+.yui-pretty-overlay {
+    width: auto !important;
+    min-width: 402px;
+    }
+
+.yui-pretty-overlay #yui-pretty-overlay-modal {
+    width: auto !important;
+    min-width: 340px;
+    }
+
 html, body {
     font-family: "dejavu sans", "bitstream vera sans", verdana, sans-serif;
     font-size: 93%;
