Turn uploading into a group that both the uploader and build-manager are a member of.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -804,7 +804,7 @@ public.structuralsubscription           = SELECT
 
 [fiera]
 type=user
-groups=script,translations_approval
+groups=script,translations_approval,uploading
 public.account                                  = SELECT
 public.archive                                  = SELECT, UPDATE
 public.archivearch                              = SELECT, UPDATE
@@ -1041,7 +1041,10 @@ public.validpersonorteamcache           = SELECT
 
 [uploader]
 type=user
-groups=script
+groups=script,uploading
+
+[uploading]
+type=group
 # Everything is keyed off an archive
 public.archive                          = SELECT, INSERT, UPDATE
 public.archivearch                      = SELECT, INSERT, UPDATE
