--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -80,6 +80,7 @@ public.answercontact                    = SELECT, INSERT, UPDATE, DELETE
 public.apportjob                        = SELECT, INSERT, UPDATE, DELETE
 public.archive                          = SELECT, INSERT, UPDATE
 public.archiveauthtoken                 = SELECT, INSERT, UPDATE
+public.archivejob                       = SELECT, INSERT, UPDATE, DELETE
 public.archivesubscriber                = SELECT, INSERT, UPDATE
 public.archivearch                      = SELECT, INSERT, UPDATE, DELETE
 public.archivedependency                = SELECT, INSERT, DELETE
@@ -880,6 +881,7 @@ type=group
 public.account                          = SELECT, INSERT, UPDATE
 public.accountpassword                  = SELECT, INSERT
 public.archive                          = SELECT, INSERT, UPDATE
+public.archivejob                       = SELECT, INSERT
 public.archivearch                      = SELECT, INSERT, UPDATE, DELETE
 public.binarypackagerelease             = SELECT, INSERT, UPDATE
 public.binarypackagefile                = SELECT, INSERT, UPDATE
