Change hard-coded refernce to @@/maybe image to use 'sprite maybe'.  Use of it with the 'invisible-link' does not work on webkit browsers.

--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -1975,6 +1975,10 @@ body.tab-bugs #portlet-subscribers .sprite {
     background-image: url(/@@/maybe.png); /* sprite-ref: icon-sprites */
     background-repeat: no-repeat;
     }
+.maybe {
+    background-image: url(/@@/maybe.png); /* sprite-ref: icon-sprites */
+    background-repeat: no-repeat;
+    }
 .error-icon {
     background-image: url(/@@/error.png); /* sprite-ref: icon-sprites */
     background-repeat: no-repeat;
