--- a/utilities/page-performance-report.ini
+++ b/utilities/page-performance-report.ini
@@ -7,6 +7,8 @@ All launchpad except opstats=(?<!\+opstats)$
 
 Launchpad Frontpage=^https?://(edge\.)?launchpad\.[^/]+/?$
 
+# Note that the bug text dump is served on the main launchpad domain
+# and we need to exlude it from the registry stats.
 Registry=^https?://(edge\.)?launchpad\.(?<!/\+text)$
 Registry - Person Index=^https?://(edge\.)?launchpad\.[^/]+/(~|%7E)[^/]+$
 Registry - Pillar Index=^https?://(edge\.)?launchpad\.[^/]+/\w[^/]*$
@@ -17,6 +19,9 @@ Answers - Front page=^https?://answers.[^/]+/?$
 Blueprints=^https?://blueprints\.
 Blueprints - Front page=^https?://blueprints\.[^/]+/?$
 
+# Note that the bug text dump is not served on the bugs domain,
+# probably for hysterical reasons. This is why the bugs regexp is
+# confusing.
 Bugs=^https?://(bugs\.|.+/bugs/\d+/\+text$)
 Bugs - Front page=^https?://bugs\.[^/]+/?$
 Bugs - Bug Page=^https?://bugs\.[^/]+/.+/\+bug/\d+$
