--- a/buildout-templates/bin/lint.sh.in
+++ b/buildout-templates/bin/lint.sh.in
@@ -32,13 +32,14 @@ if [ -z "$1" ]; then
             # This is a loom, lint changes relative to the lower thread.
             rev_option="-r thread:"
         else
-            if test "$(bzr pipes | sed -n -e "/^\\*/q;p" | wc -l)" -gt 0 ; then
-                # This is a pipeline with at least one pipe before the current,
-                # lint changes relative to the previous pipe
+            if test "$(bzr pipes | sed -n -e "/^\\*/q;p" | wc -l)" -gt 0; then
+                # This is a pipeline with at least one pipe before the
+                # current, lint changes relative to the previous pipe
                 rev_option="-r ancestor::prev"
             else
                 # Lint changes relative to the parent.
-                rev=`bzr info | sed '/parent branch:/!d; s/ *parent branch: /ancestor:/'`
+                rev=`bzr info | sed \
+                    '/parent branch:/!d; s/ *parent branch: /ancestor:/'`
                 rev_option="-r $rev"
             fi
         fi
