A bunch of hacks to get ++apidoc++ to work. Now I can at least navigate interfaces, but not everything is working

--- a/versions.cfg
+++ b/versions.cfg
@@ -143,7 +143,8 @@ zope.app.locales = 3.5.1
 zope.app.localpermission = 3.7.0
 zope.app.onlinehelp = 3.5.2
 zope.app.pagetemplate = 3.7.1
-zope.app.preference = 3.7.0
+zope.app.preference = 3.8.1
+zope.preference = 3.8.0
 zope.app.principalannotation = 3.6.1
 zope.app.publication = 3.9.0
 zope.app.publisher = 3.10.0
