Fix the IAbsoluteURL issue

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1968,6 +1968,8 @@ representation_cache_expiration_time: 14400
 
 [vhost.testopenid]
 
+[vhost.apidoc]
+
 [vhost.ubuntu_openid]
 
 [vhost.shipitubuntu]
