--- a/versions.cfg
+++ b/versions.cfg
@@ -48,7 +48,7 @@ Paste = 1.7.2
 PasteDeploy = 1.3.3
 pyasn1 = 0.0.9a
 pycrypto = 2.0.1
-pydkim = 0.3-bug-587783-2
+pydkim = 0.3-mbp-r7
 pyOpenSSL = 0.10
 python-memcached = 1.45
 python-openid = 2.2.1
